[package]
name = "rs-abieos"
version = "0.1.1"
edition = "2021"
build = "build.rs"

[[bin]]
name = "rs-abieos"
path = "bin-src/main.rs"

[dependencies]
error-chain = "0.12.4"
regex = "1.10.3"
lazy_static = "1.4.0"
rust-embed = "8.3.0"
chrono = "0.4.35"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"

[build-dependencies]
cc = { version = "1.0.90", features = ["parallel"] }
cmake = "0.1.50"
sys-info = "0.9.1"
bindgen = "0.69.4"
