[package]
name = "rs_abieos"
version = "0.1.2"
edition = "2021"
build = "build.rs"
authors = ["Igor Lins e Silva"]
license = "MIT"
repository = "https://github.com/eosrio/rs-abieos"
description = """
A Rust wrapper library for Abieos, used for Antelope (former EOSIO) ABI serialization and deserialization.
"""
categories = ["encoding", "parsing"]
keywords = ["eosio", "antelope", "abi", "serialization", "deserialization"]

[[bin]]
name = "rs_abieos"
path = "bin-src/main.rs"
doc = false

[build-dependencies]
cc = { version = "1.0.90", features = ["parallel"] }
bindgen = "0.69.4"